# horoskope_server

./: CMakeLists.txt  database.db  main.cpp
libs/: html_parser.hpp  httplib.h  sqlitepp.h
libs/sqlite/: sqlite3.h
src/: config.h  models.h  repository.cpp  repository.h  utils.h
test_client/: CMakeLists.txt  client.cpp
